--- a/attractions.html
+++ b/attractions.html
@@ -32,9 +32,9 @@
 
       <nav>
           <ul>
-            <li><a href="#">Beaches</a></li>
-            <li><a href="#">Water</a></li>
-            <li><a href="#">Air</a></li>
+            <li><a href="#beaches">Beaches</a></li>
+            <li><a href="#water">Water</a></li>
+            <li><a href="#air">Air</a></li>
           </ul>
 
     </header>
